@@ -3,16 +3,31 @@
 	<tr valign="top">
 		<th scope="row"><label for="gdpr_delete"><?php _e( 'Delete Appointments', 'appointments' ) ?></label></th>
 		<td>
-            <?php _appointments_html_chceckbox( $options, 'gdpr_delete', 'appointments_gdpr_delete' ); ?>
-            <p class="description"><?php _e( 'You can force to delete completed appointments.', 'appointments' ) ?></p>
+			<?php _appointments_html_chceckbox( $options, 'gdpr_delete', 'appointments_gdpr_delete' ); ?>
+			<p class="description"><?php _e( 'You can force to delete completed appointments.', 'appointments' ) ?></p>
 		</td>
 	</tr>
 	<tr class="appointments_gdpr_delete">
-		<th scope="row"><?php _e( 'Nuber of days', 'appointments' ) ?></th>
+		<th scope="row"><?php _e( 'Number of days', 'appointments' ) ?></th>
 		<td>
 			<input value="<?php echo esc_attr( $options['gdpr_number_of_days'] ); ?>" name="gdpr_number_of_days" type="number" min="1" />
-            <p class="description"><?php _e( 'Completed appointments will be deleted after .', 'appointments' ) ?></p>
+			<p class="description"><?php _e( 'Completed appointments will be deleted after .', 'appointments' ) ?></p>
 		</td>
+	</tr>
+	<tr valign="top">
+		<th scope="row"><label for="gdpr_delete"><?php _e( 'Agreement', 'appointments' ) ?></label></th>
+		<td>
+			<?php _appointments_html_chceckbox( $options, 'gdpr_checkbox_show', 'appointments_gdpr_checkbox_show' ); ?>
+			<p class="description"><?php _e( 'Add a checkbox specifically asking the user of the form if they consent to you storing and using their personal information to get back in touch with them.', 'appointments' ) ?></p>
+		</td>
+	</tr>
+	<tr class="appointments_gdpr_checkbox_show">
+		<th scope="row"><?php _e( 'Checkbox text', 'appointments' ) ?></th>
+		<td><input type="text" class="large-text" value="<?php echo esc_attr( $options['gdpr_checkbox_text'] ); ?>" name="gdpr_checkbox_text" /></td>
+	</tr>
+	<tr class="appointments_gdpr_checkbox_show">
+		<th scope="row"><?php _e( 'Error message', 'appointments' ) ?></th>
+		<td><input type="text" class="large-text" value="<?php echo esc_attr( $options['gdpr_checkbox_alert'] ); ?>" name="gdpr_checkbox_alert" /></td>
 	</tr>
 	<?php do_action( 'app-settings-gdpr_settings' ); ?>
 </table>
