@@ -14,6 +14,11 @@ function appointments_get_default_options() {
 	$confirmation_message = App_Template::get_default_confirmation_message();
 	$reminder_message = App_Template::get_default_reminder_message();
 
+	$gdpr_show = strtolower( _x( 'no', 'Enter "yes" for the European Union countries.', 'appointments' ) );
+	if ( ! preg_match( '/^(yes|no)$/', $gdpr_show ) ) {
+		$gdpr_show = 'no';
+	}
+
 	return apply_filters( 'appointments_default_options', array(
 		'min_time'					=> 30,
 		'additional_min_time'		=> '',
@@ -63,17 +68,20 @@ function appointments_get_default_options() {
 		'reminder_time'				=> '24',
 		'send_reminder_worker'		=> 'yes',
 		'reminder_time_worker'		=> '4',
-		'confirmation_subject'		=> __('Confirmation of your Appointment','appointments'),
+		'confirmation_subject'		=> __( 'Confirmation of your Appointment','appointments' ),
 		'confirmation_message'		=> $confirmation_message,
-		'reminder_subject'			=> __('Reminder for your Appointment','appointments'),
+		'reminder_subject'			=> __( 'Reminder for your Appointment','appointments' ),
 		'reminder_message'			=> $reminder_message,
 		'log_emails'				=> 'yes',
 		'allow_cancel'				=> 'no',
 		'cancel_page'				=> 0,
 		'thank_page'				=> 0,
-        'keep_options_on_uninstall' => true,
-        'gdpr_delete'               => 'no',
-        'gdpr_number_of_days'       => 28,
+		'keep_options_on_uninstall' => true,
+		'gdpr_delete'               => 'no',
+		'gdpr_number_of_days'       => 28,
+		'gdpr_checkbox_show'        => $gdpr_show,
+		'gdpr_checkbox_text'        => __( 'By using this form you agree with the storage and handling of your data by this website.', 'appointments' ),
+		'gdpr_checkbox_alert'       => __( 'Please accept the privacy checkbox.', 'appointments' ),
 	) );
 }
 
